# gmrender-resurrect-silan

./: configure.ac  helper  helper.txt
src/: Makefile.am  logging.c  main.c  output.c  output.h  output_module.h  output_silan.c  output_silan.h  swa_gpio_api.h  swa_msg_api.h  trace.txt  upnp_connmgr.c  upnp_control.c  upnp_control.h  upnp_device.c  upnp_device.h  upnp_renderer.c  upnp_transport.c  webserver.c  webserver.h
tmp/: .config  Kconfig  cmd  ir_input.c  kernel-central.diff  lirc_silan.c
tmp/ir/: Kconfig  ir_lg_input.c
